# WMP-with-API

./: .gitignore  README.md
WMP Backend/: package-lock.json  package.json  pyproject.toml  serverless.yml
WMP Backend/.serverless/: requirements.txt  serverless-state.json
WMP Backend/src/: data_database.py  data_user.py  service.py  settings.py
WMP Frontend/MobileApp/: settings.gradle.kts
WMP Frontend/MobileApp/androidApp/: build.gradle.kts
WMP Frontend/MobileApp/androidApp/src/main/: AndroidManifest.xml
WMP Frontend/MobileApp/gradle/wrapper/: gradle-wrapper.properties
WMP Frontend/MobileApp/iosApp/iosApp/: AppDelegate.swift  SceneDelegate.swift
WMP Frontend/MobileApp/iosApp/iosApp.xcodeproj/: project.pbxproj
WMP Frontend/MobileApp/iosApp/iosApp/Controller/: ViewController.swift
WMP Frontend/MobileApp/iosApp/iosApp/Model/: LoginResponseModel.swift
WMP Frontend/MobileApp/iosApp/iosApp/View/: keyboardManager.swift
WMP Frontend/MobileApp/iosApp/iosApp/View/Base.lproj/: Main.storyboard
WMP Frontend/MobileApp/iosApp/iosAppTests/: iosAppTests.swift
WMP Frontend/MobileApp/iosApp/iosAppUITests/: iosAppUITests.swift  iosAppUITestsLaunchTests.swift
WMP Frontend/MobileApp/shared/: build.gradle.kts
WMP Frontend/MobileApp/shared/src/androidMain/: AndroidManifest.xml
WMP Frontend/MobileApp/shared/src/androidMain/kotlin/com/example/mobileapp/: Platform.kt
WMP Frontend/MobileApp/shared/src/androidTest/kotlin/com/example/mobileapp/: androidTest.kt
WMP Frontend/MobileApp/shared/src/commonMain/kotlin/com/example/mobileapp/: APIHandler.kt  Greeting.kt  (+1 more)
(+4 files in other folders)
